--- a/pom.xml
+++ b/pom.xml
@@ -77,6 +77,6 @@
                 </executions>
             </plugin>
         </plugins>
+        <finalName>atividade-jsf-docker</finalName>
     </build>
-
 </project>
